Updates *Add WelcomeMassage method. *etc

--- a/CPP00/ex01/Makefile
+++ b/CPP00/ex01/Makefile
@@ -1,7 +1,8 @@
 NAME 	= PhoneBook
 
 SRC 	= PhoneBook.class.cpp \
-		  main.cpp
+		  Contact.class.cpp \
+		  main.cpp \
 
 OBJ 	= $(patsubst %.cpp,%.o,$(SRC))
 
