--- a/CPP00/ex00/Makefile
+++ b/CPP00/ex00/Makefile
@@ -14,7 +14,7 @@ all: $(NAME)
 $(NAME): $(OBJ)
 	g++ $(CFLAGS) $(CSTD) $(OBJ) -o $@
 
-%.o: %.c
+%.o: %.cpp
 	g++ $(CFLAGS) $(CSTD) -c $< -o $@
 
 re: fclean all
