--- a/CPP00/ex01/Makefile
+++ b/CPP00/ex01/Makefile
@@ -16,7 +16,7 @@ all: $(NAME)
 $(NAME): $(OBJ)
 	g++ $(CFLAGS) $(CSTD) $(OBJ) -o $@
 
-%.o: %.c
+%.o: %.cpp
 	g++ $(CFLAGS) $(CSTD) -c $< -o $@
 
 re: fclean all
